--- a/css/ossUploadStyle.css
+++ b/css/ossUploadStyle.css
@@ -36,7 +36,7 @@
     vertical-align: middle;
     position: relative;
 }
-#uploaderPick, .start-uploader{
+#uploaderPick, .start-uploader, .add-btn{
     font-size: 18px;
     background: #00b7ee;
     border-radius: 3px;
@@ -52,7 +52,7 @@
 #uploaderPick:hover {
     background: #00a2d4;
 }
-#uploaderPick a,.start-uploader a {
+#uploaderPick a,.start-uploader a, .add-btn a{
     color: #fff;
     text-decoration: none;
 }
